--- a/src/components/GameBoard/style.scss
+++ b/src/components/GameBoard/style.scss
@@ -10,8 +10,8 @@ div.gameBoard{
   flex-direction: row;
   justify-content: center;
 
-  border: 1px solid blue;
-  background-color: #ffffe6;
+  //border: 1px solid #0000ff;
+  //background-color: #ffffe6;
 
   margin: auto;
   width: 64%;
